[workspace]
resolver = "2"
members = [
    "examples",
    "examples/nih-twin-peaks",
    "examples/polysynth",
    "examples/simple-echo",
    "examples/supersaw",
    "examples/synth-slint",
    "examples/feedback-synth",
    "examples/modular",
    "examples/medium-graph",
    "oscen-lib",
    "oscen-macros",
    "xtask"
]
