[workspace]
resolver = "2"
members = [
    "examples",
    "examples/nih-twin-peaks",
    "examples/fm-synth",
    "examples/polysynth",
    "examples/simple-echo",
    "examples/supersaw",
    "examples/synth-slint",
    "examples/feedback-synth",
    "examples/modular",
    "examples/medium-graph",
    "examples/electric-piano",
    "examples/pivot",
    "oscen-lib",
    "oscen-macros",
    "xtask"
]
