[workspace]
resolver = "2"
members = [
    "examples",
    "examples/nih-twin-peaks",
    "examples/fm-synth",
    "examples/simple-echo",
    "examples/electric-piano",
    "examples/oversampled-saturator",
    "examples/pivot",
    "oscen-lib",
    "oscen-macros",
    "oscen-graph-compiler",
    "xtask"
]
