[package]
name = "cpal-apps"
version = "0.1.0"
authors = ["jeffreyrosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oscen = { path = "../oscen-lib" }
cpal = "0.12.1"
anyhow = "1.0.32"