[package]
name = "cpal-apps"
version = "0.1.0"
authors = ["jeffreyrosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oscen = { path = "../oscen-lib" }
cpal = "0.15.3"
anyhow = "1.0.93"
libmath = "0.2.1"
iced = { version = "0.13.1", features = ["canvas"] }