[package]
name = "cpal-apps"
version = "0.1.0"
authors = ["jeffreyrosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oscen = { path = "../oscen-lib" }
oscen-macros = { path = "../oscen-macros" }
arrayvec = "0.7.6"
cpal = "0.15.2"
anyhow = "1.0.71"
libmath = "0.2.1"
eframe = "0.31.0"
