[package]
name = "nannou_apps"
version = "0.1.0"
authors = [
    "Reed Rosenbluth <reed.rosenbluth@gmail.com>", 
    "Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>",
    "Satya Bodduluri  <skbodduluri@gmail.com >",
]
edition = "2018"

[dependencies]
oscen = { path = "../oscen-lib" }
nannou = "0.14.1"
nannou_audio = "0.14"
midir = "0.5"
crossbeam = "0.7"
pitch_calc = "0.12.0"
rand = "0.7"