[package]
name = "nannou_apps"
version = "0.1.0"
authors = [
    "Reed Rosenbluth <reed.rosenbluth@gmail.com>", 
    "Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>",
]
edition = "2018"
autobins = false

[dependencies]
oscen = { path = "../oscen-lib" }
nannou = "0.18.1"
nannou_audio = "0.18"
midir = "0.9.1"
crossbeam = "0.8.2"
pitch_calc = "0.12.0"
rand = "0.8.5"

[[bin]]
name = "check"
path = "src/bin/check.rs"

[[bin]]
name = "fm"
path = "src/bin/fm.rs"

[[bin]]
name = "fourier"
path = "src/bin/fourier.rs"

[[bin]]
name = "pluck"
path = "src/bin/pluck.rs"