[package]
name = "oscen-graph-compiler"
version = "0.2.0"
edition = "2021"
description = "Compiler library for the Oscen `graph!` DSL. Parses, analyses, and emits Rust tokens for graph definitions."

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
proc-macro2 = "1.0"
