[package]
name = "oscen"
version = "0.2.0"
edition = "2021"

[features]
default = ["convolution"]
fft = ["dep:realfft"]
convolution = ["fft"]

[dependencies]
oscen-macros = { path = "../oscen-macros" }
arc-swap = "1.9.1"
arrayvec = "0.7.6"
rtrb = "0.3.4"
cpal = "0.15.3"
hound = "3.5.1"
realfft = { version = "3", optional = true }

[dev-dependencies]
float-cmp = "0.10.0"
criterion = { version = "0.5", features = ["html_reports"] }
assert_no_alloc = "1.1.2"

[[bench]]
name = "static_vs_runtime"
harness = false

# [[bin]]
# name = "profile_graph"
# path = "perf/profile_graph.rs"