[package]
name = "clap-gain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
oscen = { path = "../../oscen-lib" }
oscen-macros = { path = "../../oscen-macros" }
arrayvec = "0.7.6"
cpal = "0.15.2"
anyhow = "1.0.71"
libmath = "0.2.1"
eframe = "0.31.0"
clack-plugin = { git = "https://github.com/prokopyl/clack/" }
clack-extensions = { git = "https://github.com/prokopyl/clack/", features = [
    "audio-ports",
    "params",
    "state",
    "clack-plugin",
] }

[dev-dependencies]
clack-host = { git = "https://github.com/prokopyl/clack/" }
clack-extensions = { git = "https://github.com/prokopyl/clack/", features = [
    "audio-ports",
    "params",
    "state",
    "clack-plugin",
    "clack-host",
] }
