[package]
name = "clap-twin-peaks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]

[dependencies]
oscen = { path = "../../oscen-lib" }
oscen-macros = { path = "../../oscen-macros" }
arrayvec = "0.7.6"
cpal = "0.15.2"
anyhow = "1.0.71"
libmath = "0.2.1"
clack-plugin = { git = "https://github.com/prokopyl/clack/" }
clack-extensions = { git = "https://github.com/prokopyl/clack/", features = [
    "audio-ports",
    "params",
    "state",
    "clack-plugin",
] }

[dev-dependencies]
clack-host = { git = "https://github.com/prokopyl/clack/" }
clack-extensions = { git = "https://github.com/prokopyl/clack/", features = [
    "audio-ports",
    "params",
    "state",
    "clack-plugin",
    "clack-host",
] }

[package.metadata.bundle]
name = "Twin Peaks Synth"
identifier = "com.oscen.twin-peaks.clap"
icon = []
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "Music"
short_description = "Twin Peaks Filter Synthesizer"
long_description = "A synthesizer based on the Twin Peaks algorithm with dual filters and sequencer"