[package]
name = "twin-peaks-nih"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oscen = { path = "../../oscen-lib" }
oscen-macros = { path = "../../oscen-macros" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug" }
parking_lot = "0.12"

[package.metadata.bundle]
name = "Twin Peaks Synth (NIH)"
identifier = "com.oscen.twin-peaks-nih"
icon = []
version = "0.1.0" 
copyright = "Copyright (c) 2025"
category = "Music"
short_description = "Twin Peaks Filter Synthesizer (NIH-plug)"
long_description = "A synthesizer based on the Twin Peaks algorithm with dual filters and sequencer using NIH-plug"