[package]
name = "twin-peak-nih"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oscen = { path = "../../oscen-lib" }
oscen-macros = { path = "../../oscen-macros" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug" }
parking_lot = "0.12"
arrayvec = "0.7.6"

[package.metadata.bundle]
name = "TwinPeak Filter"
identifier = "com.oscen.twin-peak-nih"
icon = []
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "Music"
short_description = "TwinPeak Filter"
long_description = "Digital implementation of Rob Hordijk's TwinPeak Filter"
